--- a/css/style.css
+++ b/css/style.css
@@ -41,8 +41,24 @@ button{
 	-ms-transition:0.5s all;
 }
 /*--- end reset code ---*/
+
 body {
+    background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
+    background-size: 400% 400%;
+	animation: gradient 15s ease infinite;
 	font-family: 'Quicksand', sans-serif;
+}
+
+@keyframes gradient {
+    0% {
+        background-position: 0% 50%;
+    }
+    50% {
+        background-position: 100% 50%;
+    }
+    100% {
+        background-position: 0% 50%;
+    }
 }
 /*-- banner --*/
 	/* CUSTOMIZE THE NAVBAR
@@ -65,8 +81,8 @@ body {
 	padding-left: 0;
 }
 .navbar-wrapper .navbar {
-	padding-right: 15px;
-	padding-left: 15px;
+	padding-right: 5px;
+	padding-left: 5px;
 }
 .navbar-wrapper .navbar .container {
 	width: auto;
@@ -161,14 +177,19 @@ body {
 }
 /*-- /link-effect --*/
 .banner {
-	background:url(../images/banner2.jpg) no-repeat;
+	/*background:url(../images/banner2.jpg) no-repeat;*/
 	background-position:center;
-	background-size:cover;
-	-webkit-background-size:cover;
-	-moz-background-size:cover;
-	-o-background-size:cover;
+	background-size:50em;
+	-webkit-background-size:50em;
+	-moz-background-size:50em;
+	-o-background-size:50em;
+	border-radius: 50%;
 	min-height:925px;
+	/*filter: blur(8px);
+    -webkit-filter: blur(8px);*/
 }
+
+
 /*-- slider --*/
 .banner .rslides {
 	height:925px;
@@ -207,7 +228,8 @@ body {
 .banner-info {
     text-align: center;
     width: 100%;
-    margin: 280px 0 0 390px;
+	margin: center;
+	
 }
 .banner-info h3{
 	color: #fff;
@@ -217,6 +239,7 @@ body {
 	margin: 0;
 	font-family: 'Cinzel', serif;
 	padding: 60px 0 20px 0;
+	
 }
 .banner-info p {
 	color: #fff;
